--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+API_URL=https://cloud.leonardo.ai/api/rest/v1/generations
 API_KEY=57c8daa0-ec4e-4997-9f9c-73399336062a
+B2_KEY_ID=0057a8127d9f9f30000000001
+B2_APPLICATION_KEY=K005pRjlU3f/QjlwXFI9xes6lvEtbKM
+BUCKET_NAME=Imagenes-G5
+DATABASE_URL=postgresql://postgres:ALEXA1209@localhost/users_tartamia
+SECRET_KEY=secret
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
